--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -1,34 +1,94 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
-
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-
     <!-- your app's js -->
     <script src="js/app.js"></script>
-  </head>
-  <body ng-app="starter">
+    <!-- ctrl's js -->
+    <script src="js/ctrl/todos.js"></script>
+    <!-- srv's js -->
+    <script src="js/srv/projects.js"></script>    
+</head>
 
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
-  </body>
+<body ng-app="starter" ng-controller="TodoCtrl">
+
+    <ion-side-menus>
+
+        <!-- Center content -->
+        <ion-side-menu-content>
+            <ion-header-bar class="bar-dark">
+                <button class="button button-icon" ng-click="toggleProjects()">
+                    <i class="icon ion-navicon"></i>
+                </button>
+                <h1 class="title">{{activeProject.title}}</h1>
+                <!-- New Task button-->
+                <button class="button button-icon" ng-click="newTask()">
+                    <i class="icon ion-compose"></i>
+                </button>
+            </ion-header-bar>
+            <ion-content scroll="false">
+                <ion-list>
+                    <ion-item ng-repeat="task in activeProject.tasks" on-double-tap="onDoubleTap()">
+                        {{task.title}}
+                    </ion-item>
+                </ion-list>
+            </ion-content>
+        </ion-side-menu-content>
+
+        <!-- Left menu -->
+        <ion-side-menu side="left">
+            <ion-header-bar class="bar-dark">
+                <button class="button button-icon ion-trash-a" ng-click="removeProject()">
+                </button>            
+                <h1 class="title">Proyectos</h1>
+                <button class="button button-icon ion-plus" ng-click="newProject()">
+                </button>
+            </ion-header-bar>
+            <ion-content scroll="false">
+                <ion-list>
+                    <ion-item ng-repeat="project in projects" ng-click="selectProject(project, $index)" ng-class="{active: activeProject == project}">
+                        {{project.title}}
+                    </ion-item>
+                </ion-list>
+            </ion-content>
+        </ion-side-menu>
+
+    </ion-side-menus>
+
+    <script id="new-task.html" type="text/ng-template">
+        <div class="modal">
+            <!-- Modal header bar -->
+            <ion-header-bar class="bar-secondary">
+                <h1 class="title">Nueva Tarea</h1>
+                <button class="button button-clear button-positive" ng-click="closeNewTask()">Cancelar</button>
+            </ion-header-bar>
+            <!-- Modal content area -->
+            <ion-content>
+                <form ng-submit="createTask(task)">
+                    <div class="list">
+                        <label class="item item-input">
+                            <input type="text" placeholder="¿Qué necesitas hacer?" ng-model="task.title">
+                        </label>
+                    </div>
+                    <div class="padding">
+                        <button type="submit" class="button button-block button-positive">Crear Tarea</button>
+                    </div>
+                </form>
+            </ion-content>
+        </div>
+    </script>
+</body>
+
 </html>
