--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -51,19 +51,16 @@
                         </span>
                         <br ng-if="task.fechaFin">
                         <hr ng-if="task.fechaFin">
-                        <span ng-if="task.fechaFin">
+                        <span class="item-note" ng-if="task.fechaFin">
                             <i class="icon ion-android-time"></i>
-                            Inicio: {{task.fechaInicio | date:'dd/MM - h:mm a'}}
-                        </span>
-                        <br ng-if="task.fechaFin">
-                        <hr ng-if="task.fechaFin">
-                        <span ng-if="task.fechaFin">
+                            {{task.fechaInicio | date:'dd/MM - h:mm a'}} | 
                             <i class="icon ion-android-time"></i>
-                            Final: {{task.fechaFin | date:'dd/MM - h:mm a'}}
+                            {{task.fechaFin | date:'dd/MM - h:mm a'}}
                         </span>
+
                         <br ng-if="task.fechaFin">
-                        <hr ng-if="task.fechaFin">
-                        <span ng-if="task.fechaFin">
+                        <!-- <hr ng-if="task.fechaFin"> -->
+                        <span class="item-note" ng-if="task.fechaFin">
                             <i class="icon ion-android-stopwatch"></i>
                             Tiempo: {{(task.fechaFin - task.fechaInicio) /1000/60/60  | number:2}} hrs.
                         </span>
