--- a/todo/www/index.html
+++ b/todo/www/index.html
@@ -45,26 +45,31 @@
             </ion-header-bar>
             <ion-content scroll="false">
                 <ion-list>
-                    <ion-checkbox ng-repeat="task in activeProject.tasks" ng-model="task.completada" ng-change="terminada(task)">
-                        <span ng-class="{terminada: task.completada == true}">
-                            {{task.title}}
-                        </span>
-                        <br ng-if="task.fechaFin">
-                        <hr ng-if="task.fechaFin">
-                        <span class="item-note" ng-if="task.fechaFin">
-                            <i class="icon ion-android-time"></i>
-                            {{task.fechaInicio | date:'dd/MM - h:mm a'}} | 
-                            <i class="icon ion-android-time"></i>
-                            {{task.fechaFin | date:'dd/MM - h:mm a'}}
-                        </span>
+                    <ion-item ng-repeat="task in activeProject.tasks">
+                        <ion-checkbox ng-model="task.completada" ng-change="terminada(task)">
+                            <span ng-class="{terminada: task.completada == true}">
+                                {{task.title}}
+                            </span>
+                            <br ng-if="task.fechaFin">
+                            <hr ng-if="task.fechaFin">
+                            <span class="item-note" ng-if="task.fechaFin">
+                                <i class="icon ion-android-time"></i>
+                                {{task.fechaInicio | date:'dd/MM - h:mm a'}} | 
+                                <i class="icon ion-android-time"></i>
+                                {{task.fechaFin | date:'dd/MM - h:mm a'}}
+                            </span>
 
-                        <br ng-if="task.fechaFin">
-                        <!-- <hr ng-if="task.fechaFin"> -->
-                        <span class="item-note" ng-if="task.fechaFin">
-                            <i class="icon ion-android-stopwatch"></i>
-                            Tiempo: {{(task.fechaFin - task.fechaInicio) /1000/60/60  | number:2}} hrs.
-                        </span>
-                    </ion-checkbox>
+                            <br ng-if="task.fechaFin">
+                            <!-- <hr ng-if="task.fechaFin"> -->
+                            <span class="item-note" ng-if="task.fechaFin">
+                                <i class="icon ion-android-stopwatch"></i>
+                                Tiempo: {{(task.fechaFin - task.fechaInicio) /1000/60/60  | number:2}} hrs.
+                            </span>
+                        </ion-checkbox>
+                        <button class="button button-small button-assertive" ng-if="task.fechaFin" ng-click="borrarTask(task)">
+                            Eliminar tarea
+                        </button>
+                    </ion-item>
                 </ion-list>
             </ion-content>
         </ion-side-menu-content>
